[workspace.package]
edition = "2024"

[workspace]
resolver = "2"
members = [
    "crates/*",
    "domains/client/*",
    "domains/pallets/*",
    "domains/primitives/*",
    "domains/runtime/*",
    "domains/service",
    "domains/test/runtime/*",
    "domains/test/pallets/*",
    "domains/test/service",
    "domains/test/utils",
    "shared/*",
    "test/subspace-test-client",
    "test/subspace-test-runtime",
    "test/subspace-test-service",
]

[workspace.dependencies]
actix-web = { version = "4.9.0", default-features = false }
aes = "0.9.0-pre.2"
anyhow = "1.0.89"
array-bytes = "6.2.3"
async-channel = "1.9.0"
async-lock = "3.4.0"
async-nats = "0.37.0"
async-oneshot = "0.5.9"
async-trait = "0.1.88"
auto-id-domain-runtime = { version = "0.1.0", path = "domains/runtime/auto-id" }
auto-id-domain-test-runtime = { version = "0.1.0", path = "domains/test/runtime/auto-id" }
backoff = "0.4.0"
base58 = "0.2.0"
bip39 = "2.0.0"
bitvec = "1.0.1"
blake2 = { version = "0.10.6", default-features = false }
blake3 = { version = "1.8.2", default-features = false }
blst = "0.3.13"
bytes = { version = "1.7.2", default-features = false }
bytesize = "1.3.0"
cc = "1.1.23"
chacha20 = { version = "0.9.1", default-features = false }
clap = "4.5.18"
core_affinity = "0.8.1"
cpufeatures = "0.2.17"
criterion = { version = "0.5.1", default-features = false }
cross-domain-message-gossip = { version = "0.1.0", path = "domains/client/cross-domain-message-gossip" }
derive_more = { version = "1.0.0", default-features = false }
domain-block-builder = { version = "0.1.0", path = "domains/client/block-builder", default-features = false }
domain-block-preprocessor = { version = "0.1.0", path = "domains/client/block-preprocessor", default-features = false }
domain-check-weight = { version = "0.1.0", path = "domains/pallets/domain-check-weight", default-features = false }
domain-client-consensus-relay-chain = { version = "0.1.0", path = "domains/client/consensus-relay-chain" }
domain-client-message-relayer = { version = "0.1.0", path = "domains/client/relayer" }
domain-client-operator = { version = "0.1.0", path = "domains/client/domain-operator" }
domain-eth-service = { version = "0.1.0", path = "domains/client/eth-service" }
domain-pallet-executive = { version = "0.1.0", path = "domains/pallets/executive", default-features = false }
domain-runtime-primitives = { version = "0.1.0", path = "domains/primitives/runtime", default-features = false }
domain-service = { version = "0.1.0", path = "domains/service" }
domain-test-primitives = { version = "0.1.0", path = "domains/test/primitives", default-features = false }
domain-test-service = { version = "0.1.0", path = "domains/test/service" }
domain-test-utils = { version = "0.1.0", path = "domains/test/utils" }
env_logger = "0.11.5"
ethereum = { git = "https://github.com/rust-ethereum/ethereum", rev = "3be0d8fd4c2ad1ba216b69ef65b9382612efc8ba" }
event-listener = "5.3.1"
event-listener-primitives = "2.0.1"
evm-domain-runtime = { version = "0.1.0", path = "domains/runtime/evm" }
evm-domain-test-runtime = { version = "0.1.0", path = "domains/test/runtime/evm" }
fc-consensus = { version = "2.0.0-dev", git = "https://github.com/autonomys/frontier", rev = "986eb1ad6ec69c16d05d142b7e731b4b69e3b409" }
fc-db = { version = "2.0.0-dev", git = "https://github.com/autonomys/frontier", rev = "986eb1ad6ec69c16d05d142b7e731b4b69e3b409", default-features = false }
fc-mapping-sync = { version = "2.0.0-dev", git = "https://github.com/autonomys/frontier", rev = "986eb1ad6ec69c16d05d142b7e731b4b69e3b409", default-features = false }
fc-rpc = { version = "2.0.0-dev", git = "https://github.com/autonomys/frontier", rev = "986eb1ad6ec69c16d05d142b7e731b4b69e3b409", default-features = false }
fc-rpc-core = { version = "1.1.0-dev", git = "https://github.com/autonomys/frontier", rev = "986eb1ad6ec69c16d05d142b7e731b4b69e3b409" }
fc-storage = { version = "1.0.0-dev", git = "https://github.com/autonomys/frontier", rev = "986eb1ad6ec69c16d05d142b7e731b4b69e3b409" }
fdlimit = "0.3.0"
fp-account = { version = "1.0.0-dev", git = "https://github.com/autonomys/frontier", rev = "986eb1ad6ec69c16d05d142b7e731b4b69e3b409", default-features = false }
fp-evm = { version = "3.0.0-dev", git = "https://github.com/autonomys/frontier", rev = "986eb1ad6ec69c16d05d142b7e731b4b69e3b409" }
fp-rpc = { version = "3.0.0-dev", git = "https://github.com/autonomys/frontier", rev = "986eb1ad6ec69c16d05d142b7e731b4b69e3b409", default-features = false }
fp-self-contained = { version = "1.0.0-dev", git = "https://github.com/autonomys/frontier", rev = "986eb1ad6ec69c16d05d142b7e731b4b69e3b409", default-features = false }
frame-benchmarking = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
frame-executive = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
frame-support = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
frame-system = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
frame-system-benchmarking = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
fs2 = "0.4.3"
fs4 = "0.9.1"
futures = "0.3.31"
futures-timer = "3.0.3"
hash-db = { version = "0.16.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
hex-literal = "0.4.1"
hwlocality = "1.0.0-alpha.6"
jsonrpsee = "0.24.5"
kzg = { git = "https://github.com/grandinetech/rust-kzg", rev = "6c8fcc623df3d7e8c0f30951a49bfea764f90bf4", default-features = false }
libc = "0.2.159"
libp2p = { version = "0.54.2", git = "https://github.com/subspace/rust-libp2p", rev = "4ff21ede371f14ea0b90075f676ae21239ef8fbf", default-features = false }
libp2p-swarm-test = { version = "0.5.0", git = "https://github.com/subspace/rust-libp2p", rev = "4ff21ede371f14ea0b90075f676ae21239ef8fbf" }
libsecp256k1 = "0.7.1"
log = { version = "0.4.22", default-features = false }
memmap2 = "0.9.5"
memory-db = { version = "0.32.0", default-features = false }
mimalloc = "0.1.43"
mmr-gadget = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
mmr-rpc = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
multihash = "0.19.1"
nohash-hasher = "0.2.0"
num-traits = { version = "0.2.18", default-features = false }
num_cpus = "1.16.0"
ouroboros = "0.18.4"
pallet-auto-id = { version = "0.1.0", path = "domains/pallets/auto-id", default-features = false }
pallet-balances = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
pallet-block-fees = { version = "0.1.0", path = "domains/pallets/block-fees", default-features = false }
pallet-collective = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
pallet-democracy = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
pallet-domain-id = { version = "0.1.0", path = "domains/pallets/domain-id", default-features = false }
pallet-domain-sudo = { version = "0.1.0", path = "domains/pallets/domain-sudo", default-features = false }
pallet-domains = { version = "0.1.0", path = "crates/pallet-domains", default-features = false }
pallet-ethereum = { git = "https://github.com/autonomys/frontier", rev = "986eb1ad6ec69c16d05d142b7e731b4b69e3b409", default-features = false }
pallet-evm = { version = "6.0.0-dev", git = "https://github.com/autonomys/frontier", rev = "986eb1ad6ec69c16d05d142b7e731b4b69e3b409", default-features = false }
pallet-evm-chain-id = { version = "1.0.0-dev", git = "https://github.com/autonomys/frontier", rev = "986eb1ad6ec69c16d05d142b7e731b4b69e3b409", default-features = false }
pallet-evm-precompile-modexp = { version = "2.0.0-dev", git = "https://github.com/autonomys/frontier", rev = "986eb1ad6ec69c16d05d142b7e731b4b69e3b409", default-features = false }
pallet-evm-precompile-sha3fips = { version = "2.0.0-dev", git = "https://github.com/autonomys/frontier", rev = "986eb1ad6ec69c16d05d142b7e731b4b69e3b409", default-features = false }
pallet-evm-precompile-simple = { version = "2.0.0-dev", git = "https://github.com/autonomys/frontier", rev = "986eb1ad6ec69c16d05d142b7e731b4b69e3b409", default-features = false }
pallet-evm-tracker = { version = "0.1.0", path = "domains/pallets/evm-tracker", default-features = false }
pallet-messenger = { version = "0.1.0", path = "domains/pallets/messenger", default-features = false }
pallet-mmr = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
pallet-multisig = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
pallet-preimage = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
pallet-rewards = { version = "0.1.0", path = "crates/pallet-rewards", default-features = false }
pallet-runtime-configs = { version = "0.1.0", path = "crates/pallet-runtime-configs", default-features = false }
pallet-scheduler = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
pallet-storage-overlay-checks = { version = "0.1.0", path = "domains/test/pallets/storage_overlay_checks", default-features = false }
pallet-subspace = { version = "0.1.0", path = "crates/pallet-subspace", default-features = false }
pallet-subspace-mmr = { version = "0.1.0", path = "crates/pallet-subspace-mmr", default-features = false }
pallet-sudo = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
pallet-timestamp = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
pallet-transaction-fees = { version = "0.1.0", path = "crates/pallet-transaction-fees", default-features = false }
pallet-transaction-payment = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
pallet-transporter = { version = "0.1.0", path = "domains/pallets/transporter", default-features = false }
pallet-utility = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
parity-scale-codec = { version = "3.6.12", default-features = false }
parking_lot = "0.12.2"
pem = "3.0.4"
pin-project = "1.1.5"
prometheus = { version = "0.13.0", default-features = false }
prometheus-client = "0.22.3"
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
rand_core = "0.6.4"
rayon = "1.10.0"
reqwest = { version = "0.12.9", default-features = false }
ring = "0.17.8"
rlp = "0.6"
rs_merkle = { version = "1.4.2", default-features = false }
rust-kzg-blst = { git = "https://github.com/grandinetech/rust-kzg", rev = "6c8fcc623df3d7e8c0f30951a49bfea764f90bf4", default-features = false }
sc-basic-authorship = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-block-builder = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-chain-spec = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-cli = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sc-client-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-client-db = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-consensus = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-consensus-slots = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-consensus-subspace = { version = "0.1.0", path = "crates/sc-consensus-subspace" }
sc-consensus-subspace-rpc = { version = "0.1.0", path = "crates/sc-consensus-subspace-rpc" }
sc-domains = { version = "0.1.0", path = "crates/sc-domains" }
sc-executor = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sc-executor-common = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-informant = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-keystore = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-network = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-network-common = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-network-gossip = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-network-sync = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sc-network-transactions = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-offchain = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-proof-of-time = { version = "0.1.0", path = "crates/sc-proof-of-time" }
sc-rpc = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-rpc-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-rpc-server = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-service = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sc-state-db = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-storage-monitor = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sc-subspace-block-relay = { version = "0.1.0", path = "crates/sc-subspace-block-relay" }
sc-subspace-chain-specs = { version = "0.1.0", path = "crates/sc-subspace-chain-specs" }
sc-subspace-sync-common = { version = "0.1.0", path = "shared/sc-subspace-sync-common", default-features = false }
sc-sysinfo = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sc-telemetry = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-tracing = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-transaction-pool = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-transaction-pool-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-utils = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
scale-info = { version = "2.11.2", default-features = false }
schnellru = "0.2.4"
schnorrkel = { version = "0.11.4", default-features = false }
seq-macro = "0.3.5"
serde = { version = "1.0.216", default-features = false }
serde-big-array = "0.5.1"
serde_json = "1.0.133"
sha2 = { version = "0.10.7", default-features = false }
sp-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-application-crypto = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-arithmetic = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-auto-id = { version = "0.1.0", path = "domains/primitives/auto-id", default-features = false }
sp-block-builder = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-block-fees = { version = "0.1.0", path = "domains/primitives/block-fees", default-features = false }
sp-blockchain = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-consensus = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-consensus-slots = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-consensus-subspace = { version = "0.1.0", path = "crates/sp-consensus-subspace", default-features = false }
sp-core = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-domain-digests = { version = "0.1.0", path = "domains/primitives/digests", default-features = false }
sp-domain-sudo = { version = "0.1.0", path = "domains/primitives/domain-sudo", default-features = false }
sp-domains = { version = "0.1.0", path = "crates/sp-domains", default-features = false }
sp-domains-fraud-proof = { version = "0.1.0", path = "crates/sp-domains-fraud-proof", default-features = false }
sp-evm-tracker = { version = "0.1.0", path = "domains/primitives/evm-tracker", default-features = false }
sp-executive = { version = "0.1.0", path = "domains/primitives/executive", default-features = false }
sp-externalities = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-genesis-builder = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-inherents = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-io = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-keyring = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-keystore = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-messenger = { version = "0.1.0", path = "domains/primitives/messenger", default-features = false }
sp-messenger-host-functions = { version = "0.1.0", path = "domains/primitives/messenger-host-functions", default-features = false }
sp-mmr-primitives = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-objects = { version = "0.1.0", path = "crates/sp-objects", default-features = false }
sp-offchain = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-runtime = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-runtime-interface = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-session = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-state-machine = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-std = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-storage = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-subspace-mmr = { version = "0.1.0", path = "crates/sp-subspace-mmr", default-features = false }
sp-timestamp = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-tracing = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-transaction-pool = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-trie = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-version = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
sp-weights = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba", default-features = false }
spin = "0.9.7"
sppark = { version = "0.1.8", git = "https://github.com/autonomys/sppark", rev = "b2a181eb99c8200f1a604f04122551ea39fbf63f" }
ss58-registry = "1.51.0"
static_assertions = "1.1.0"
strum_macros = "0.26.4"
subspace-archiving = { version = "0.1.0", path = "crates/subspace-archiving" }
subspace-core-primitives = { version = "0.1.0", path = "crates/subspace-core-primitives", default-features = false }
subspace-data-retrieval = { version = "0.1.0", path = "shared/subspace-data-retrieval" }
subspace-erasure-coding = { version = "0.1.0", path = "crates/subspace-erasure-coding", default-features = false }
subspace-farmer-components = { version = "0.1.0", path = "crates/subspace-farmer-components" }
subspace-gateway-rpc = { version = "0.1.0", path = "crates/subspace-gateway-rpc" }
subspace-kzg = { version = "0.1.0", path = "shared/subspace-kzg", default-features = false }
subspace-logging = { version = "0.0.1", path = "shared/subspace-logging" }
subspace-metrics = { version = "0.1.0", path = "shared/subspace-metrics" }
subspace-networking = { version = "0.1.0", path = "crates/subspace-networking" }
subspace-proof-of-space = { version = "0.1.0", path = "crates/subspace-proof-of-space", default-features = false }
subspace-proof-of-space-gpu = { version = "0.1.0", path = "shared/subspace-proof-of-space-gpu" }
subspace-proof-of-time = { version = "0.1.0", path = "crates/subspace-proof-of-time" }
subspace-rpc-primitives = { version = "0.1.0", path = "crates/subspace-rpc-primitives" }
subspace-runtime = { version = "0.1.0", path = "crates/subspace-runtime" }
subspace-runtime-primitives = { version = "0.1.0", path = "crates/subspace-runtime-primitives", default-features = false }
subspace-service = { version = "0.1.0", path = "crates/subspace-service" }
subspace-test-client = { version = "0.1.0", path = "test/subspace-test-client" }
subspace-test-primitives = { version = "0.1.0", path = "test/subspace-test-primitives", default-features = false }
subspace-test-runtime = { version = "0.1.0", path = "test/subspace-test-runtime" }
subspace-test-service = { version = "0.1.0", path = "test/subspace-test-service" }
subspace-verification = { version = "0.1.0", path = "crates/subspace-verification", default-features = false }
substrate-bip39 = "0.6.0"
substrate-build-script-utils = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
substrate-frame-rpc-system = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
substrate-prometheus-endpoint = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
substrate-test-client = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
substrate-wasm-builder = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
supports-color = "3.0.1"
tempfile = "3.13.0"
thiserror = { version = "2.0.0", default-features = false }
thread-priority = "1.1.0"
tokio = "1.40.0"
tokio-stream = "0.1.16"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = "0.3.18"
trie-db = { version = "0.29.1", default-features = false }
uint = { version = "0.10.0", default-features = false }
ulid = "1.1.3"
unsigned-varint = "0.8.0"
void = "1.0.2"
x509-parser = "0.16.0"
zeroize = "1.8.1"

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# This list is ordered alphabetically.
[profile.dev.package]
bitvec = { opt-level = 3 }
blake2 = { opt-level = 3 }
blake3 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
blst = { opt-level = 3 }
rust-kzg-blst = { opt-level = 3 }
chacha20 = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
kzg = { opt-level = 3 }
libm = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
subspace-archiving = { opt-level = 3 }
subspace-core-primitives = { opt-level = 3 }
subspace-erasure-coding = { opt-level = 3 }
subspace-farmer-components = { opt-level = 3 }
subspace-kzg = { opt-level = 3 }
subspace-proof-of-space = { opt-level = 3 }
subspace-proof-of-time = { opt-level = 3 }
substrate-bip39 = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
lto = "fat"

# Reason: We need to patch substrate dependency of frontier to our fork
# TODO: Remove if/when we are using upstream substrate instead of fork
[patch."https://github.com/paritytech/polkadot-sdk.git"]
frame-benchmarking = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
frame-support = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
frame-system = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-block-builder = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-client-db = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-consensus = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-consensus-slots = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-client-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-network = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-network-common = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-network-sync = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-rpc = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-service = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-telemetry = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-transaction-pool = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-transaction-pool-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sc-utils = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-application-crypto = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-arithmetic = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-block-builder = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-blockchain = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-consensus = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-consensus-slots = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-core = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-crypto-hashing = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-database = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-debug-derive = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-externalities = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-inherents = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-io = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-keystore = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-runtime = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-runtime-interface = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-state-machine = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-std = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-storage = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-timestamp = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-trie = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-version = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
sp-weights = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
staging-xcm = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
substrate-prometheus-endpoint = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }
xcm-procedural = { git = "https://github.com/subspace/polkadot-sdk", rev = "e831132867930ca90a7088c7246301ab29f015ba" }

[patch."https://github.com/subspace/polkadot-sdk.git"]
# De-duplicate extra copy that comes from Substrate repo
substrate-bip39 = "0.6.0"

[patch."https://github.com/autonomys/rust-libp2p.git"]
# Patch away `libp2p` in our dependency tree with the git version.
# This brings the fixes in our `libp2p` fork into substrate's dependencies.
#
# This is a hack: patches to the same repository are rejected by `cargo`. But it considers
# "subspace/rust-libp2p" and "autonomys/rust-libp2p" to be different repositories, even though
# they're redirected to the same place by GitHub, so it allows this patch.
libp2p = { git = "https://github.com/subspace/rust-libp2p", rev = "4ff21ede371f14ea0b90075f676ae21239ef8fbf" }
libp2p-identity = { git = "https://github.com/subspace/rust-libp2p", rev = "4ff21ede371f14ea0b90075f676ae21239ef8fbf" }
multistream-select = { git = "https://github.com/subspace/rust-libp2p", rev = "4ff21ede371f14ea0b90075f676ae21239ef8fbf" }

[patch.crates-io]
# Patch away `libp2p-identity` in our dependency tree with the git version.
# For details see: https://github.com/subspace/rust-libp2p/blob/4ff21ede371f14ea0b90075f676ae21239ef8fbf/Cargo.toml#L140-L145
libp2p-identity = { git = "https://github.com/subspace/rust-libp2p", rev = "4ff21ede371f14ea0b90075f676ae21239ef8fbf" }
