[package]
name = "cirrus-node-primitives"
description = "Node primitives for Subspace Network"
license = "GPL-3.0-or-later"
version = "0.1.0"
authors = ["Subspace Labs <https://subspace.network>"]
edition = "2021"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
include = [
	"/src",
	"/Cargo.toml",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.19"
parity-scale-codec = { version = "2.3.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.132", features = ["derive"] }
sp-core = { version = "4.1.0-dev", git = "https://github.com/paritytech/substrate", rev = "2c4549689dbb86c23725dac2f82af35faa07c9f6" }
sp-application-crypto = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "2c4549689dbb86c23725dac2f82af35faa07c9f6" }
sp-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "2c4549689dbb86c23725dac2f82af35faa07c9f6" }
sp-runtime = { version = "4.1.0-dev", git = "https://github.com/paritytech/substrate", rev = "2c4549689dbb86c23725dac2f82af35faa07c9f6" }
sp-executor = { path = "../sp-executor" }
subspace-core-primitives = { version = "0.1.0", path = "../subspace-core-primitives" }
subspace-runtime-primitives = { version = "0.1.0", path = "../subspace-runtime-primitives" }
